# ThothRelay

./: README.md  requirements.txt  run.py  start_app.py
app/: ietf.py
app/Model/: DeepSeekR1.py
app/scrapy/tutorial/tutorial/spiders/: __init__.py
osrm_backend/: CMakeLists.txt
osrm_backend/data/: Instruct.txt
static/: style.css
static/css/base/: global.css  reset.css  utilities.css
static/css/components/: animation.css  buttons.css  cards.css  dropdown.css  navbar.css
static/css/pages/: about.css  chat.css  home.css  nmap.css  offlinemap.css  osrm.css  payment.css  profile.css  services.css
templates/: about.html  base.html  home.html  index.html  nmap.html  offlinemap.html  payment.html  profile.html  services.html
